2004-04-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c (close_cb): Never destroy the dialog once
	created. This fixes a leak of the file list.

2004-04-04  Callum McKenzie  <callum@physics.otago.ac.nz>
        
	* properties.c: convert to games_file_list which mostly
	obliterates Paolo's patch.
	
	* gnothello.c: 
	* properties.c: GTK_OBJECT -> G_OBJECT

	* proprties.c: GTK_SIGNAL_FUNC -> G_CALLBACK

2004-02-17  Paolo Borelli  <pborelli@katamail.com>

	* properties.c: do not leak theme_list.

2004-03-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c: Slight tweak to Jonathan's patch to avoid the use
	of _signal_handlers_block/unblock, i.e. remove the ugly bit.

Thu Mar  4 20:29:07 2004  Jonathan Blandford  <jrb@gnome.org>

	* properties.c (fill_menu): Prevent signals on the combo while
	filling it.  Also, make the code a bit more robust against unfound
	themes.

2004-03-04  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/iagno.xml: Updated version to 2.6.

2004-02-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnothello.c (about_cb): translator_credits ->
	translator-credits.

2003-12-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c (set_selection): Fix a crasher when the preferences
	are selected (pointed out by Kaushal Kumar, bug #128584).

2003-10-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: Removed *_DISABLE_DEPRECATED.

	* gnothello.c: 
	* othello.c: Replacing gtk_timeout_add with g_timeout_add etc.

2003-10-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Change the way gconf files are
	installed. This should improve things for people building outside
	the source tree. See bug #123192.

2003-10-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c: Replace deprecated gtk functions.

2003-07-22  William Jon McCann  <mccann@jhu.edu>

	* properties.c (show_properties_dialog): Use mnemonic in preferences